--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,15 +7,32 @@ data_ingestion:
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
 
+data_transformation:
+  root_dir: artifacts/data_transformation
+  normal_data_path: artifacts/data_ingestion/normal
+  abnormal_data_path: artifacts/data_ingestion/abnormal
+  normal_features_path: artifacts/data_transformation/normal_features.pkl
+  abnormal_features_path: artifacts/data_transformation/abnormal_features.pkl
+  feature_names: artifacts/data_transformation/feature_names.pkl
 
 
-# prepare_base_model:
-#   root_dir: artifacts/prepare_base_model
-#   base_model_path: artifacts/prepare_base_model/base_model.h5
-#   updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
+prepare_base_model:
+  root_dir: artifacts/prepare_base_model
+  feature_names_path : artifacts/data_transformation/feature_names.pkl
+  X_train_scaled_path: artifacts/data_transformation/normal_features.pkl
+  X_val_path: artifacts/data_transformation/abnormal_features.pkl
+  X_combined_test_path: artifacts/data_transformation/X_combined_test.pkl
+  y_combined_test_path: artifacts/data_transformation/y_combined_test.pkl
+  base_model_path: artifacts/prepare_base_model/base_model.h5
+  feature_importance_path : artifacts/prepare_base_model/feature_importance_ranking.pkl
 
-
-
+training:
+  root_dir: artifacts/training
+  trained_model_path: artifacts/training/model.h5
+  normal_features_path: artifacts/data_transformation/normal_features.pkl
+  abnormal_features_path: artifacts/data_transformation/abnormal_features.pkl
+  feature_names_path : artifacts/data_transformation/feature_names.pkl
+  feature_importance_path : artifacts/prepare_base_model/feature_importance_ranking.pkl
 
 # training:
 #   root_dir: artifacts/training
